# cigarette-counter

./: Cargo.toml
migrations/: 20250107040228_cigarette.down.sql  20250107040228_cigarette.up.sql  20250107084522_cigarette.down.sql  20250107084522_cigarette.up.sql
src/: commands.rs  config.rs  database.rs  main.rs
