[package]
name = "cigarette-counter"
version = "0.1.0"
edition = "2021"

[dependencies]
poise = "0.6.1"
tokio = { version = "1.42.0", features = ["full"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres", "chrono" ] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
native-tls = "0.2"
postgres-native-tls = "0.5"
anyhow = "1.0.95"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
